# bookdatamaker

./: README.md  grep  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  python-publish.yml
examples/: export_dataset_demo.py
src/bookdatamaker/: __init__.py  cli.py
src/bookdatamaker/dataset/: __init__.py  builder.py  dataset_manager.py
src/bookdatamaker/llm/: __init__.py  message_utils.py  minimax_mcp.py  parallel_generator.py  prompt_builder.py  search1api_mcp.py
src/bookdatamaker/mcp/: server.py
src/bookdatamaker/ocr/: __init__.py  document_parser.py  extractor.py  image_writer.py
src/bookdatamaker/prompts/: base_system_prompt.md  combined_search_guidance.md  image_workflow.md  inference_and_opinion.md  minimax_guidance.md  search1api_guidance.md
src/bookdatamaker/tools/: __init__.py  image_tools.py  page_tools.py  registry.py  submission_tools.py
tests/: test_dataset.py  test_image_tools.py  test_mcp.py  test_message_utils.py  test_ocr.py  test_page_tools.py  test_paragraph_indexing.py  test_prompt_builder.py  test_resume_reliability.py  test_submission_tools.py  test_tools_registry.py
